k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  namespace: my-angular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: sahul/angular-client:latest
          ports:
            - containerPort: 80
